Bug 196631 - [PATCH] fix upper nibble whacking in ip_ib_mc_map(..) in src/sys/ofed/include/ip.h
Summary: [PATCH] fix upper nibble whacking in ip_ib_mc_map(..) in src/sys/ofed/include...
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-12 18:11 UTC by Enji Cooper
Modified: 2015-07-08 19:11 UTC (History)
2 users (show)

See Also:
gavin: mfc-stable10+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Enji Cooper freebsd_committer freebsd_triage 2015-01-12 18:11:06 UTC
The bitmask operation on buf[16]in ip_ib_mc_map(..) whacks the upper nibble,
which in turn causes IB to not talk on all multicast groups.

The attached patch fixes that.

Submitted by: Jeff Meeghan <jeff.mehgan@isilon.com>

Environment:
FreeBSD 11.0-CURRENT
Comment 1 Gavin Atkinson freebsd_committer freebsd_triage 2015-01-12 18:14:09 UTC
Fixed in r276879
Comment 2 Gavin Atkinson freebsd_committer freebsd_triage 2015-01-12 18:48:51 UTC
Hi,

Due to an issue with the backend FreeBSD Bugzilla database, your original PR and any updates to it since have been lost.  I've recreated the original PR as best as I can, however any attachments and updates you submitted to the PR have been lost.  Please could you resubmit them?

Thanks, and apologies.
Comment 3 commit-hook freebsd_committer freebsd_triage 2015-01-13 16:57:50 UTC
A commit references this bug:

Author: hselasky
Date: Tue Jan 13 16:57:03 UTC 2015
New revision: 277137
URL: https://svnweb.freebsd.org/changeset/base/277137

Log:
  MFC r276879:
  Don't mask the IP-address when doing multicast IP over infiniband.

  PR:		196631
  Sponsored by:	Mellanox Technologies

Changes:
_U  stable/10/
  stable/10/sys/ofed/include/net/ip.h
Comment 4 commit-hook freebsd_committer freebsd_triage 2015-01-13 17:02:51 UTC
A commit references this bug:

Author: hselasky
Date: Tue Jan 13 17:02:22 UTC 2015
New revision: 277138
URL: https://svnweb.freebsd.org/changeset/base/277138

Log:
  MFC r276879:
  Don't mask the IP-address when doing multicast IP over infiniband.

  PR:             196631
  Sponsored by:   Mellanox Technologies

Changes:
_U  stable/9/sys/
  stable/9/sys/ofed/include/net/ip.h
Comment 5 Glen Barber freebsd_committer freebsd_triage 2015-07-08 18:32:08 UTC
To originators/assignees of this PR:

A commit to the tree references this PR, however the PR is still in a non-closed state.

Please review this PR and close as appropriate, or if closing the PR requires a merge to stable/10, please let re@ know as soon as possible.

Thank you.

Glen