MFC r276879: Don't mask the IP-address when doing multicast IP over infiniband.

PR:             196631
Sponsored by:   Mellanox Technologies

Former-commit-id: 3a7dbe939909490ba9d6c2e7f491897745dfe18c